Rename: QA -> Record

--- a/Paracka.vcxproj
+++ b/Paracka.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="id.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="QesData.h" />
+    <ClInclude Include="Record.h" />
     <ClInclude Include="RndTable.h" />
     <ClInclude Include="Paracka.h" />
     <ClInclude Include="MainWindow.h" />
@@ -151,6 +152,7 @@
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="Record.cpp" />
     <ClCompile Include="RndTable.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
