--- a/Paracka.vcxproj
+++ b/Paracka.vcxproj
@@ -131,7 +131,7 @@
   <ItemGroup>
     <ClInclude Include="id.h" />
     <ClInclude Include="main.h" />
-    <ClInclude Include="QesData.h" />
+    <ClInclude Include="RecordList.h" />
     <ClInclude Include="Record.h" />
     <ClInclude Include="RndTable.h" />
     <ClInclude Include="Paracka.h" />
@@ -145,7 +145,7 @@
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
-    <ClCompile Include="QesData.cpp">
+    <ClCompile Include="RecordList.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">EnableFastChecks</BasicRuntimeChecks>
