読み取り処理の整理

--- a/Paracka.vcxproj
+++ b/Paracka.vcxproj
@@ -84,6 +84,7 @@
       <ProgramDatabaseFile>.\Debug/Paracka.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
+      <AdditionalLibraryDirectories>C:\boost_1_55_0\libs\regex\build\stage</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
