マーキングのみに絞り込む機能

--- a/Paracka.vcxproj
+++ b/Paracka.vcxproj
@@ -127,6 +127,7 @@
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
       <AdditionalOptions>/LTCG %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalLibraryDirectories>C:\boost_1_55_0\libs\regex\build\stage</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
