--- a/Paracka.vcxproj.filters
+++ b/Paracka.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClInclude Include="RecordList.h">
       <Filter>Source Files\Data</Filter>
     </ClInclude>
+    <ClInclude Include="RecordVisitor.h">
+      <Filter>Source Files\Data</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -58,6 +61,9 @@
       <Filter>Source Files\Data</Filter>
     </ClCompile>
     <ClCompile Include="RecordList.cpp">
+      <Filter>Source Files\Data</Filter>
+    </ClCompile>
+    <ClCompile Include="RecordVisitor.cpp">
       <Filter>Source Files\Data</Filter>
     </ClCompile>
   </ItemGroup>
