回答状態を保ったまま再読み込み

--- a/Paracka.vcxproj
+++ b/Paracka.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ClearStates.h" />
     <ClInclude Include="id.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="RecordList.h" />
@@ -141,6 +142,7 @@
     <ClInclude Include="MainWindow.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ClearStates.cpp" />
     <ClCompile Include="main.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
