フォルダ整理

--- a/Paracka.vcxproj
+++ b/Paracka.vcxproj
@@ -131,61 +131,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="ClearStates.h" />
-    <ClInclude Include="id.h" />
-    <ClInclude Include="main.h" />
-    <ClInclude Include="RecordList.h" />
-    <ClInclude Include="Record.h" />
-    <ClInclude Include="RecordVisitor.h" />
-    <ClInclude Include="RndTable.h" />
-    <ClInclude Include="Paracka.h" />
-    <ClInclude Include="MainWindow.h" />
+    <ClInclude Include="src\ClearStates.h" />
+    <ClInclude Include="src\id.h" />
+    <ClInclude Include="src\main.h" />
+    <ClInclude Include="src\MainWindow.h" />
+    <ClInclude Include="src\Paracka.h" />
+    <ClInclude Include="src\Record.h" />
+    <ClInclude Include="src\RecordList.h" />
+    <ClInclude Include="src\RecordVisitor.h" />
+    <ClInclude Include="src\RndTable.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ClearStates.cpp" />
-    <ClCompile Include="main.cpp">
-      <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <BasicRuntimeChecks Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">EnableFastChecks</BasicRuntimeChecks>
-      <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
-    </ClCompile>
-    <ClCompile Include="RecordList.cpp">
-      <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <BasicRuntimeChecks Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">EnableFastChecks</BasicRuntimeChecks>
-      <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
-    </ClCompile>
-    <ClCompile Include="Record.cpp" />
-    <ClCompile Include="RecordVisitor.cpp" />
-    <ClCompile Include="RndTable.cpp">
-      <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <BasicRuntimeChecks Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">EnableFastChecks</BasicRuntimeChecks>
-      <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
-    </ClCompile>
-    <ClCompile Include="Paracka.cpp">
-      <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <BasicRuntimeChecks Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">EnableFastChecks</BasicRuntimeChecks>
-      <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
-    </ClCompile>
-    <ClCompile Include="MainWindow.cpp">
-      <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <BasicRuntimeChecks Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">EnableFastChecks</BasicRuntimeChecks>
-      <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
-    </ClCompile>
+    <ClCompile Include="src\ClearStates.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\MainWindow.cpp" />
+    <ClCompile Include="src\Paracka.cpp" />
+    <ClCompile Include="src\Record.cpp" />
+    <ClCompile Include="src\RecordList.cpp" />
+    <ClCompile Include="src\RecordVisitor.cpp" />
+    <ClCompile Include="src\RndTable.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="Paracka.rc" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="main.ico" />
+    <ResourceCompile Include="src\Paracka.rc" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\KppOldLib\KppOldLib.vcxproj">
@@ -206,6 +173,9 @@
     <ProjectReference Include="..\KppLibs\WinSystemLib\WinSystemLib.vcxproj">
       <Project>{4ee1cfb9-db66-4e57-b0a4-4c567fa1962a}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="res\main.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
