--- a/Paracka.vcxproj.filters
+++ b/Paracka.vcxproj.filters
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="res\main.ico" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="src\Paracka.rc">
